<resources>
    <string name="app_name">LoginForm W/ Data Biding</string>
    <string name="empty_email">Email field is empty</string>
    <string name="empty_pass">Password field is empty</string>
    <string name="invalid_email">Invalid Email address</string>
    <string name="email_title">Enter your Email</string>
    <string name="email">email@example.com</string>
    <string name="password_title">Enter your password</string>
    <string name="password">Your password</string>
    <string name="reset">Reset</string>
    <string name="login">Login</string>
</resources>
